# backend-template

./: .env.example  .importlinter  Makefile  alembic.ini  pyproject.toml
alembic/: README  env.py  script.py.mako  tenant.py
alembic/versions/: d9eb09f4f799_default_tenant.py  e6c3ff258c30_shared_schema_setup.py
app/: __init__.py
app/api/: app.py
app/api/v1/: data_model.py  health_check.py
app/api/v1/security/: authentication.py  common.py
cli/: cli.py
config/: logging_backend.yml  logging_worker.yml
src/: data_model.py  db.py  settings.py
src/logging/: main.py  utils.py
src/multitenancy/: tenant.py  user.py
